--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -6,10 +6,10 @@
             <h5 class="card-title">{% upper_words article.title %}</h5>
             <p class="card-text">{{ article.content }}</p>
             <p class="card-text">
-                <a href="{% url 'news_by_category' article.category.id %}" class="text-decoration-none">{{ article.category }}</a>
+                <a href="{% url 'news:news_by_category' article.category.id %}" class="text-decoration-none">{{ article.category }}</a>
             </p>
             {% for tag in article.tags.all %}
-                <a href="{% url 'news_by_tag' tag.id %}" class="badge bg-info text-decoration-none">{{ tag }}</a>
+                <a href="{% url 'news:news_by_tag' tag.id %}" class="badge bg-info text-decoration-none">{{ tag }}</a>
             {% endfor %}
             <p class="card-text">{{ article.id_author }}</p>
             <p class="card-text">{{ article.publication_date }}</p>
