--- a/news/templates/include/article_preview.html
+++ b/news/templates/include/article_preview.html
@@ -1,4 +1,5 @@
-<!-- Краткое представление новости news/templates/include/article_preview.html -->
+
+<!-- Этот шаблон представляет краткое представление новости -->
 <div class="card">
     <div class="card-body">
         <h5 class="card-title">#{{ article.id }}. {{ article.title }}</h5>
