--- a/news/templates/news/catalog.html
+++ b/news/templates/news/catalog.html
@@ -9,10 +9,10 @@
     <h1 class="text-center mb-4">Каталог новостей Info to Go</h1>
     <p class="text-center">Всего новостей: {{ news_count }}</p>
     <p class="text-center">Всего пользователей: {{ users_count }}</p>
-    <div class="row">
+    <div class="row g-4">
         {% for article in news %}
             <div class="col-md-4">
-                {% include "include/article_preview.html" with article=article %}
+                {% include "include/article_preview.html" with article=article truncate_length=50 use_tag_margin=True use_formatted_meta=True %}
             </div>
         {% endfor %}
     </div>
