Update css, html дизайн

--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -84,6 +84,13 @@
                     </div>
                 </div>
             </div>
+            <!-- Добавляем кнопку возврата к списку новостей -->
+            <div class="mt-4">
+                <a href="{% url 'news:catalog' %}" class="btn btn-outline-primary">
+                    <i class="bi bi-arrow-left"></i> К списку новостей
+                </a>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
