--- a/templates/include/nav_menu.html
+++ b/templates/include/nav_menu.html
@@ -34,4 +34,11 @@
             <i class="bi bi-plus-circle me-1"></i> Добавить статью
         </a>
     </li>
+    <!-- Пункт "Загрузить из JSON" -->
+    <li class="nav-item">
+       <a class="nav-link" href="{% url 'news:upload_json' %}">
+           <i class="bi bi-upload me-1"></i> Загрузить из JSON
+      </a>
+   </li>
+
 </ul>
