--- a/templates/include/nav_menu.html
+++ b/templates/include/nav_menu.html
@@ -41,4 +41,27 @@
       </a>
    </li>
 
+   <!-- Добавляем разделитель и пункт для входа/выхода -->
+   <li class="nav-item"><hr class="dropdown-divider"/></li>
+
+   {% if user.is_authenticated %}
+   <!-- Если пользователь авторизован - показываем кнопку выхода -->
+   <li class="nav-item">
+       <a class="nav-link" href="{% url 'users:logout' %}">
+           <i class="bi bi-box-arrow-right me-1"></i> Выход ({{ user.username }})
+       </a>
+   </li>
+   {% else %}
+   <!-- Если пользователь не авторизован - показываем кнопки входа и регистрации -->
+   <li class="nav-item">
+       <a class="nav-link" href="{% url 'users:login' %}">
+           <i class="bi bi-box-arrow-in-right me-1"></i> Вход
+       </a>
+   </li>
+   <li class="nav-item">
+       <a class="nav-link" href="{% url 'users:signup' %}">
+           <i class="bi bi-person-plus me-1"></i> Регистрация
+       </a>
+   </li>
+   {% endif %}
 </ul>
