--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -29,8 +29,10 @@
                 {% endfor %}
             </div>
 
-            {% if article.id_author %}
-                <p class="card-text">Автор: {{ article.id_author }}</p>
+            {% if article.author %}
+                <p class="card-text">
+                    <i class="bi bi-person"></i> Автор: {{ article.author.username }}
+                </p>
             {% endif %}
 
             <div class="mt-3 d-flex justify-content-between align-items-center">
