--- a/templates/include/nav_menu.html
+++ b/templates/include/nav_menu.html
@@ -44,24 +44,27 @@
    <!-- Добавляем разделитель и пункт для входа/выхода -->
    <li class="nav-item"><hr class="dropdown-divider"/></li>
 
-   {% if user.is_authenticated %}
-   <!-- Если пользователь авторизован - показываем кнопку выхода -->
-   <li class="nav-item">
-       <a class="nav-link" href="{% url 'users:logout' %}">
-           <i class="bi bi-box-arrow-right me-1"></i> Выход ({{ user.username }})
-       </a>
-   </li>
-   {% else %}
-   <!-- Если пользователь не авторизован - показываем кнопки входа и регистрации -->
-   <li class="nav-item">
-       <a class="nav-link" href="{% url 'users:login' %}">
-           <i class="bi bi-box-arrow-in-right me-1"></i> Вход
-       </a>
-   </li>
-   <li class="nav-item">
-       <a class="nav-link" href="{% url 'users:signup' %}">
-           <i class="bi bi-person-plus me-1"></i> Регистрация
-       </a>
-   </li>
-   {% endif %}
+        {% if user.is_authenticated %}
+        <!-- Если пользователь авторизован - показываем кнопку выхода -->
+        <li class="nav-item">
+            <form method="post" action="{% url 'users:logout' %}" class="m-0 p-0">
+                {% csrf_token %}
+                <button type="submit" class="nav-link btn btn-link" style="background: none; border: none; width: 100%; text-align: left;">
+                    <i class="bi bi-box-arrow-right me-1"></i> Выход ({{ user.username }})
+                </button>
+            </form>
+        </li>
+        {% else %}
+        <!-- Если пользователь не авторизован - показываем кнопки входа и регистрации -->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'users:login' %}">
+                <i class="bi bi-box-arrow-in-right me-1"></i> Вход
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'users:signup' %}">
+                <i class="bi bi-person-plus me-1"></i> Регистрация
+            </a>
+        </li>
+        {% endif %}
 </ul>
